fix(Root): responsive-design
Improved the UI to ensure compatibility with mobile devices by fixing the layout issues with the

navbar and filter components

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -33,7 +33,13 @@ nav ul li a:hover {
     padding: 5px;
   }
 
+  nav ul {
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 10px;
+  }
+
   nav ul li {
-    margin: 0 5px;
+    margin: 5px;
   }
 }
