--- a/src/components/SearchByEarthDate/SearchByFilter.module.css
+++ b/src/components/SearchByEarthDate/SearchByFilter.module.css
@@ -1,5 +1,6 @@
-.searchByFilter {
+css .searchByFilter {
   display: flex;
+  flex-wrap: wrap;
   gap: 3rem;
   align-items: center;
   justify-content: center;
@@ -7,36 +8,36 @@
   padding: 3rem 0.5rem;
   border-bottom: 1px solid #ccc;
 }
-
-.inputContainer {
+.inputContainer,
+.checkboxContainer {
+  flex: 1 0 200px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   margin-bottom: 10px;
 }
-
 .label {
-  margin-right: 10px;
+  margin-bottom: 10px;
   font-weight: bold;
 }
-
 .input {
+  width: 100%;
   padding: 5px;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
-
 .checkboxContainer {
   display: flex;
+  flex-direction: row;
   align-items: center;
   margin-bottom: 10px;
 }
-
 .checkboxLabel {
   margin-left: 5px;
 }
-
 .button {
+  width: 100%;
   padding: 10px 20px;
   background-color: #007bff;
   color: #fff;
@@ -44,7 +45,13 @@
   border-radius: 4px;
   cursor: pointer;
 }
-
 .button:hover {
   background-color: #0056b3;
+}
+@media (max-width: 768px) {
+  .searchByFilter {
+    flex-direction: column;
+    max-width: 95%;
+    margin: 0 auto;
+  }
 }
